prevent minimap dots going out of map
the new 1v1 warmup arenas are outside the minimap, so the player dots are all over the screen (and even beyond the screen, causing scrollbars to be shown)

this prevents this

--- a/src/stylus/minimap.styl
+++ b/src/stylus/minimap.styl
@@ -15,6 +15,8 @@
 	// $diameter = 1.7rem
 	$diameter = 1.574vh
 
+	overflow hidden
+
 	img {
 		max-width 100%
 	}
